# cbi-inflation-page

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: merger.py  scraper.py
website/: dataset_notes.md  metadata.yaml  metadata.yaml.example
